# FastAPI-train

FastAPI revision project/: README.md  auth.py  config.py  database.py  donation.db  frontend.py  main.py  models.py  pyproject.toml  schemas.py  seed.py
FastAPI revision project/alembic/: env.py
FastAPI revision project/alembic/versions/: 1fd55457f19e_initial_schema.py
FastAPI revision project/core/: __init__.py  auth.py  config.py  database.py
FastAPI revision project/models/: __init__.py  donation.py  user.py
FastAPI revision project/routers/: donations.py  users.py
FastAPI revision project/scripts/: seed.py
FastAPI revision project/src/: app.py  db.py  dependencies.py  schemas.py  users.py
FastAPI tech with Tim/: README.md  frontend.py  main.py  pyproject.toml  test.db  test.py
FastAPI tech with Tim/src/: app.py  db.py  images.py  schemas.py  users.py
