[project]
name = "fastapi-revise-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi[standard]>=0.135.2",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "python-dotenv>=1.2.2",
    "requests>=2.33.0",
    "streamlit>=1.55.0",
    "uvicorn[standared]>=0.42.0",
    "sqlmodel>=0.0.38",
]
